--- a/css/style.css
+++ b/css/style.css
@@ -6,3 +6,7 @@
 .keyboard, .actions {
 	margin-bottom: 20px;
 }
+
+.table-striped>tbody>tr.current {
+	background-color : rgba(198, 199, 33, 0.39);
+}
